--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lindsayevans/govhack-2016/issues"
   },
-  "homepage": "https://github.com/lindsayevans/govhack-2016#readme"
+  "homepage": "https://github.com/lindsayevans/govhack-2016#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
