--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "govhack-2016",
-  "version": "0.0.1",
-  "description": "Website for the Beard Science team for GovHack 2016",
-  "main": "index.js",
+  "name": "beard-science",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "jspm install",
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lindsayevans/govhack-2016.git"
-  },
-  "author": "Lindsay Evans <lindsay.evans@boomworks.com.au>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lindsayevans/govhack-2016/issues"
-  },
-  "homepage": "https://github.com/lindsayevans/govhack-2016#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "hbs": "~4.0.0",
+    "jspm": "^0.16.41",
+    "morgan": "~1.7.0",
+    "node-sass-middleware": "0.8.0",
+    "serve-favicon": "~2.3.0"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "public"
+    },
+    "dependencies": {
+      "aframevr/aframe": "github:aframevr/aframe@^0.2.0"
+    },
+    "devDependencies": {
+      "typescript": "npm:typescript@^1.6.2"
+    }
   }
 }
