--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     },
     "dependencies": {
       "aframevr/aframe": "github:aframevr/aframe@^0.2.0",
-      "core-js": "npm:core-js@^2.4.1"
+      "core-js": "npm:core-js@^2.4.1",
+      "fetch": "npm:fetch@^1.1.0",
+      "whatwg-fetch": "npm:whatwg-fetch@^1.0.0"
     },
     "devDependencies": {
       "typescript": "npm:typescript@^1.6.2"
